# plottle

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  __init__.py  cli.py  generate_gallery.py  launch.bat  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/workflows/: docs.yml  tests.yml
.streamlit/: config.toml
binder/: requirements.txt
docs/: Makefile  bug-reports.md  cheatsheet.md  conf.py  feature_requests.md  getting_started.md  index.rst
docs/api/: io.rst  math.rst  plotting.rst
docs/archive/: issue_tracking.md
docs/gallery/: manifest.json
docs/tutorials/: cli_guide.md  gui_guide.md
example-data/Artificial/: bimodal_distribution.csv  correlation_matrix.npy  gaussian_surface.npy  generate_examples.py  grouped_categorical.csv  ir_spectrum.csv  molecular_properties.csv  normal_distribution.csv  reaction_kinetics.csv  scatter_correlation.csv  sine_cosine_waves.csv
examples/: CLI_GUIDE.md  advanced_plotting_examples.py  batch_config.json  calibration_workflow.py  curve_fitting_examples.py  data_pipeline_examples.py  io_examples.py  linear_algebra_examples.py  math_examples.py  multi_panel_examples.py  optimization_examples.py  plotly_interactive_examples.py  plotting_examples.py  publication_style_examples.py  seaborn_examples.py  spectroscopy_workflow.py  statistics_examples.py
examples/data/: coordinates.npy  experiment.pkl  experimental_data.csv  experimental_data.xlsx  md_analysis.csv  md_summary.pkl  simulation_data.npz  trajectory.npz
examples/plots/: batch_stats.json  interactive_3d_surface.html  interactive_heatmap.html  interactive_histogram.html  interactive_line.html  interactive_scatter.html  workflow_interactive_scatter.html
modules/: Home.py  __init__.py  annotations.py  batch.py  data_tools.py  io.py  math.py  nist.py  peaks.py  plotting.py  plugin_loader.py  report.py  signal.py  spectroscopy.py
modules/molecular/: __init__.py  atom_data.py  parsers.py
modules/pages/: 10_Spectroscopy.py  11_Molecular_Viz.py  12_Batch_Analysis.py  13_Help.py  14_Settings.py  1_Data_Upload.py  2_Quick_Plot.py  3_Analysis_Tools.py  4_Multi_Plot_Dashboard.py  5_Advanced_Plotting.py  7_Export_Results.py  8_Gallery.py  9_Data_Tools.py  (+1 more)
plugins/: __init__.py  plugin_example.py
tests/: __init__.py  test_annotations.py  test_batch.py  test_cli.py  test_data_tools.py  test_integration.py  test_io.py  test_math.py  test_molecular_parsers.py  test_nist.py  test_peaks.py  test_plotting.py  test_plotting_advanced.py  test_plugin_loader.py  test_report.py  test_signal.py  test_spectroscopy.py  test_utils.py
(+5 files in other folders)
