[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plottle"
version = "2.0.0"
description = "A general-purpose Python toolkit for scientific data visualization and analysis"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Jonathan D. Schultz", email = "jdschultz@nccu.edu" },
]
keywords = ["visualization", "plotting", "science", "chemistry", "matplotlib", "plotly", "streamlit"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "streamlit>=1.25.0",
    "openpyxl>=3.1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "furo>=2024.1.29",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.28.0",
]

[project.scripts]
plottle = "cli:main"

[project.urls]
Homepage = "https://github.com/The-Schultz-Lab/plottle"
Repository = "https://github.com/The-Schultz-Lab/plottle"
Documentation = "https://nccu-schultz-lab.github.io/plottle/"
"Bug Tracker" = "https://github.com/The-Schultz-Lab/plottle/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"modules/pages/*.py" = ["E402"]
"modules/Home.py" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
explicit_package_bases = true

[tool.coverage.run]
omit = [
    "modules/Home.py",
    "modules/pages/*",
]

[tool.pytest.ini_options]
markers = [
    "unit: fast unit tests",
    "integration: integration tests",
    "slow: slow tests",
    "visualization: visualization tests",
]
